# Study_Architecture

./: LICENSE  README.md  pyproject.toml
Ansible/: README.md  ansible.cfg  base_config.yml  hosts.ini
Ansible/roles/docker-registry/tasks/: main.yml
Ansible/roles/docker/defaults/: main.yml
Ansible/roles/docker/tasks/: main.yml
Circuit Breaker/pybreaker/: docker-run.yml  test.yml
Circuit Breaker/pybreaker/foo_service/components/: main.py  requirements.txt
Consistent hashing/redis/: test.py
Failover/redis/: conf.py  docker-rm.yml  docker-run.yml  redis.conf  sentinel.conf  test.py
Load Balancer/HAProxy/: docker-rm.yml  docker-run.yml  haproxy.cfg  test.yml
Load Balancer/HAProxy/foo_service/components/: main.py
Load Balancer/Nginx/: docker-compose.yml  docker-rm.yml  docker-run.yml  test.yml
Load Balancer/Nginx/foo_service/components/: main.py
Load Balancer/Nginx/nginx_conf/: foo_service.conf
Replication/Postgresql/: docker-rm.yml  docker-run.yml  test.py
Replication/Postgresql/pool/: docker-compose.yml
Replication/Postgresql/primary/: docker-compose.yml  init-script.sql  pg_hba.conf  postgresql.conf
Replication/Postgresql/secondary/: docker-compose.yml  postgresql.conf  recovery.conf
Service Discovery/Consul/: docker-compose.yml  docker-rm.yml  docker-run.yml
Service Discovery/ZooKeeper/: docker-compose.yml  docker-run.yml  test.yml
Sharding/redis/: docker-compose.yml  test.py
Vagrant/: README.md  Vagrantfile
foo_service/: Dockerfile  main.py  requirements.txt
foo_service/components/: __init__.py  main.py
(+3 files in other folders)
