[tool.poetry]
name = "study-architecture"
version = "0.1.0"
description = ""
authors = ["hyunchan-jung <tmzkdlqmfn1@naver.com>"]
readme = "README.md"
packages = [{include = "study_architecture"}]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
